14:03, 24/11/2014 Wangchen DAI, only a little modifications

--- a/report.tex
+++ b/report.tex
@@ -352,7 +352,7 @@ Now, we could also configure the board by either Minicom or ADB Shell. See Fig. 
 After completing ADB connection setup, the on-board Android applications can be managed on Host PC, the following commands are examples of installation/uninstallation applications:
 \begin{lstlisting}[language={bash}]
 adb install qq.apk
-adb uninstall com.android.vending.apk.apk
+adb uninstall com.android.vending.apk
 \end{lstlisting}
 An alternative way to uninstall applications is using ``rm" command to remove the onboard files of the target application directly:
 \begin{lstlisting}[language={bash}]
